~/.zcash -> ~/.zclassic, -r Author:    Jon Layton <jon@seequ.com>
Changes to be committed:
	modified:   .github/ISSUE_TEMPLATE.md
	modified:   .gitignore
	renamed:    contrib/debian/examples/zcash.conf -> contrib/debian/examples/zclassic.conf
	modified:   contrib/debian/zcash.examples
	modified:   doc/amqp.md
	modified:   doc/files.md
	modified:   doc/man/zcash-cli.1
	modified:   doc/man/zcashd.1
	modified:   doc/release-notes/release-notes-0.11.2.z3.md
	modified:   doc/release-notes/release-notes-1.0.0-rc3.md
	modified:   doc/release-notes/release-notes-1.0.5.md
	modified:   doc/release-process.md
	modified:   doc/wallet-backup.md
	modified:   doc/zmq.md
	modified:   qa/pull-tester/run-bitcoind-for-test.sh.in
	modified:   qa/rpc-tests/test_framework/util.py
	modified:   qa/zcash/performance-measurements.sh
	modified:   src/bitcoin-cli.cpp
	modified:   src/bitcoind.cpp
	modified:   src/init.cpp
	modified:   src/metrics.cpp
	modified:   src/rpcmining.cpp
	modified:   src/util.cpp
	modified:   src/util.h

--- a/doc/man/zcash-cli.1
+++ b/doc/man/zcash-cli.1
@@ -25,7 +25,7 @@ This help message
 .HP
 \fB\-conf=\fR<file>
 .IP
-Specify configuration file (default: zcash.conf)
+Specify configuration file (default: zclassic.conf)
 .HP
 \fB\-datadir=\fR<dir>
 .IP
