--- a/doc/man/zcashd.1
+++ b/doc/man/zcashd.1
@@ -41,7 +41,7 @@ How thorough the block verification of \fB\-checkblocks\fR is (0\-4, default: 3)
 .HP
 \fB\-conf=\fR<file>
 .IP
-Specify configuration file (default: zcash.conf)
+Specify configuration file (default: zclassic.conf)
 .HP
 \fB\-daemon\fR
 .IP
