Readme, Copying, Install txt Author:    Jon Layton <jon@seequ.com>
Changes committed:
	modified:   COPYING
	modified:   INSTALL
	modified:   README.md

--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
-Building Zcash
+Building Zclassic
 
-See the Zcash github wiki (https://github.com/zcash/zcash/wiki) for instructions on building zcashd,
+See the Zclassic (https://github.com/z-classic/zclassic/wiki) and Zcash wiki (https://github.com/zcash/zcash/wiki) for instructions on building the daemon and cli tools,
 the intended-for-services, no-graphical-interface, reference
-implementation of Zcash.
+implementation of Zclassic.
